--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -17,32 +17,69 @@
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <p>
-      All files are available at <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
-    </p>
-    <p>
-      For more details about the release, please see the <a href="http://xowa.org/home/wiki/Blog" id="xolnki_2" title="Blog">Blog</a> or the <a href="http://xowa.org/home/wiki/Change_log" id="xolnki_3" title="Change log">Change log</a>
-    </p>
-    <h2>
-      <span class="mw-headline" id="Windows">Windows</span>
-    </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.0.1903/xowa_app_windows_64_v4.6.0.1903.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.1.1903/xowa_app_windows_64_v4.6.1.1903.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.0.1903/xowa_app_windows_v4.6.0.1903.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.1.1903/xowa_app_windows_v4.6.1.1903.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
+    <div id="toc" class="toc">
+      <div id="toctitle" class="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#Linux"><span class="tocnumber">1</span> <span class="toctext">Linux</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-2">
+          <a href="#Mac_OS_X"><span class="tocnumber">2</span> <span class="toctext">Mac OS X</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#Raspberry_Pi"><span class="tocnumber">3</span> <span class="toctext">Raspberry Pi</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-4">
+          <a href="#Android"><span class="tocnumber">4</span> <span class="toctext">Android</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-5">
+          <a href="#Source_code_.28Desktop.29"><span class="tocnumber">5</span> <span class="toctext">Source code (Desktop)</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-6">
+          <a href="#Source_code_.28Android.29"><span class="tocnumber">6</span> <span class="toctext">Source code (Android)</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-7">
+          <a href="#v4.6.1.1903_.282019-03-26.29"><span class="tocnumber">7</span> <span class="toctext">v4.6.1.1903 (2019-03-26)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#PC"><span class="tocnumber">7.1</span> <span class="toctext">PC</span></a>
+            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-9">
+          <a href="#v4.6.0.1903_.282019-03-23.29"><span class="tocnumber">8</span> <span class="toctext">v4.6.0.1903 (2019-03-23)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-10">
+              <a href="#Wiki"><span class="tocnumber">8.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-11">
+              <a href="#PC_2"><span class="tocnumber">8.2</span> <span class="toctext">PC</span></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
     <h2>
       <span class="mw-headline" id="Linux">Linux</span>
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.0.1903/xowa_app_linux_64_v4.6.0.1903.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.1.1903/xowa_app_linux_64_v4.6.1.1903.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.0.1903/xowa_app_linux_v4.6.0.1903.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.1.1903/xowa_app_linux_v4.6.1.1903.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +87,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.0.1903/xowa_app_macosx_64_v4.6.0.1903.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.1.1903/xowa_app_macosx_64_v4.6.1.1903.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.0.1903/xowa_app_macosx_v4.6.0.1903.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.1.1903/xowa_app_macosx_v4.6.1.1903.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +98,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.0.1903/xowa_app_arm_v4.6.0.1903.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.1.1903/xowa_app_arm_v4.6.1.1903.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +114,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v4.6.0.1903.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v4.6.1.1903.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -88,6 +125,28 @@
         <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
       </li>
     </ul>
+    <h2>
+      <span class="mw-headline" id="v4.6.1.1903_.282019-03-26.29">v4.6.1.1903 (2019-03-26)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        Htxt: Fix old html databases not loading pages. {detected by Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Extract img.src data.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/404" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/404</a>
+      </dd>
+    </dl>
     <h2>
       <span class="mw-headline" id="v4.6.0.1903_.282019-03-23.29">v4.6.0.1903 (2019-03-23)</span>
     </h2>
@@ -101,11 +160,11 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" id="xolnki_4" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" id="xolnki_2" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major</b>
