--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -120,6 +120,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
+      v4.6.1.1903 features the following:
+    </p>
+    <ul>
+      <li>
+        (PC) Fix old html databases not loading pages
+      </li>
+    </ul>
+    <p>
       v4.6.0.1903 features the following:
     </p>
     <ul>
