--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -36,18 +36,26 @@
           </ul>
         </li>
         <li class="toclevel-1 tocsection-4">
-          <a href="#v4.6.0.1903_.282019-03-23.29"><span class="tocnumber">2</span> <span class="toctext">v4.6.0.1903 (2019-03-23)</span></a> 
+          <a href="#v4.6.1.1903_.282019-03-26.29"><span class="tocnumber">2</span> <span class="toctext">v4.6.1.1903 (2019-03-26)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#PC"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
+              <a href="#PC"><span class="tocnumber">2.1</span> <span class="toctext">PC</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-7">
-          <a href="#Archives"><span class="tocnumber">3</span> <span class="toctext">Archives</span></a>
+        <li class="toclevel-1 tocsection-6">
+          <a href="#v4.6.0.1903_.282019-03-23.29"><span class="tocnumber">3</span> <span class="toctext">v4.6.0.1903 (2019-03-23)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Wiki"><span class="tocnumber">3.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#PC_2"><span class="tocnumber">3.2</span> <span class="toctext">PC</span></a>
+            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-9">
+          <a href="#Archives"><span class="tocnumber">4</span> <span class="toctext">Archives</span></a>
         </li>
       </ul>
     </div>
@@ -110,6 +118,28 @@
       The most important category to review is <b>major</b>. The other categories may be skipped due to lower importance (if they were more important, they would be bumped up to <b>major</b>).
     </p>
     <h2>
+      <span class="mw-headline" id="v4.6.1.1903_.282019-03-26.29">v4.6.1.1903 (2019-03-26)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        Htxt: Fix old html databases not loading pages. {detected by Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Extract img.src data.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/404" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/404</a>
+      </dd>
+    </dl>
+    <h2>
       <span class="mw-headline" id="v4.6.0.1903_.282019-03-23.29">v4.6.0.1903 (2019-03-23)</span>
     </h2>
     <h3>
@@ -126,7 +156,7 @@
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major</b>
