--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -120,20 +120,20 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v4.6.2.1907 features the following:
+      v4.6.3.1908 features the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2019-05 English Wikipedia
+        (PC) Fix HTTP Server images and links not working for 2019-05 English Wiki HTML databases
       </li>
       <li>
-        (PC) Fix Category not working for en.w
+        (PC) Fix HTTP Server XowaSearch not working
       </li>
       <li>
-        (PC) Fix pages not loading due to infinite loop
+        (PC) Add HTTP Server search suggest
       </li>
       <li>
-        (PC) Various parser fixes
+        (PC) Fix major parser error in LuaJ: Script error 'Module:convert:328 attempt to compare nil with number'
       </li>
     </ul>
     <p>
