--- a/home/wiki/Change_log/v4.5.0.1703.html
+++ b/home/wiki/Change_log/v4.5.0.1703.html
@@ -202,7 +202,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.wiki.hdumps" id="xolnki_8" title="Special:XowaCfg?grp=xowa.wiki.hdumps">Special:XowaCfg?grp=xowa.wiki.hdumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.wiki.hdumps" id="xolnki_8" title="Special:XowaCfg?grp=xowa.wiki.hdumps" class="xowa-visited">Special:XowaCfg?grp=xowa.wiki.hdumps</a>
       </dd>
     </dl>
     <ul>
