--- a/home/wiki/Help/Donate.html
+++ b/home/wiki/Help/Donate.html
@@ -60,6 +60,7 @@
     <div align='center'>
       <div style=''>
         <p>
+          anonymous_d84359f8-890e-4d82-bff5-390c709fce05<br>
           anonymous_9a7ce759-7cdb-441d-8512-2f8d056ee952<br>
           anonymous<br>
           anonymous<br>
