--- a/home/wiki/Options/Security.html
+++ b/home/wiki/Options/Security.html
@@ -182,13 +182,13 @@
     <div id='xowa.app.logs.enabled__name' class='xocfg_itm_name'>Logs enabled</div>
 
     <!-- BTN:undo -->
-    <div id='xowa.app.logs.enabled__undo' data-xocfg-type='bool' class='xocfg_itm_delete'>
+    <div id='xowa.app.logs.enabled__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
       <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.logs.enabled")' title="reset to &quot;y&quot;">&nbsp;</span>
     </div>
     
     <!-- TEXT:val -->
     <div class='xocfg_itm_data'>
-<input id="xowa.app.logs.enabled" data-xocfg-key="xowa.app.logs.enabled" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox"></input></div>
+<input id="xowa.app.logs.enabled" data-xocfg-key="xowa.app.logs.enabled" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked"></input></div>
     
     <!-- HIDDEN:key,ctx -->
     <input type='hidden' id='xowa.app.logs.enabled__key_box' value='xowa.app.logs.enabled'></input>
