--- a/home/wiki/App/Wiki_types/Wikidata.html
+++ b/home/wiki/App/Wiki_types/Wikidata.html
@@ -33,7 +33,7 @@
       Phase 1 began in February of 2013. It involved moving all language links from an individual page to Wikidata.
     </p>
     <p>
-      For example, <a href="/site/en.wikipedia.org/wiki/Earth">http://en.wikipedia.org/wiki/Earth</a> used to have a link at the bottom of the page with the text of [[fr:Terre]]. This was a link to the Earth article on <a href="http://fr.wikipedia.org/wiki/Terre" rel="nofollow" class="external free">http://fr.wikipedia.org/wiki/Terre</a> .
+      For example, <a href="/site/en.wikipedia.org/wiki/Earth">http://en.wikipedia.org/wiki/Earth</a> used to have a link at the bottom of the page with the text of [[fr:Terre]]. This was a link to the Earth article on <a href="/site/fr.wikipedia.org/wiki/Terre">http://fr.wikipedia.org/wiki/Terre</a> .
     </p>
     <p>
       With Phase 1, this link was removed, and now Wikipedia does a lookup into wikidata to find the corresponding Terre article.
