--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -147,7 +147,7 @@
     </p>
     <ul>
       <li>
-        HTTP Server: Fix links and images not working for 2019-05 enwiki HTML databases. {detected by anonymous}
+        HTTP Server: Fix links and images not working for 2019-05 enwiki HTML databases. {detected by ctd}
       </li>
     </ul>
     <dl>
