--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -1276,7 +1276,7 @@
         <span style='font-variant:small-caps'>Example</span>: "File:A.png|a|b" -&gt; "b" x&gt; "a|b".
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Belgique" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Belgique</a> <a href="https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15" rel="nofollow" class="external free">https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Belgique">https://fr.wikipedia.org/wiki/Belgique</a> <a href="https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15" rel="nofollow" class="external free">https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15</a>
       </dd>
     </dl>
     <ul>
@@ -1923,7 +1923,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Fix regex pattern for matching end of string.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj" id="xolnki_29" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Rimbaud_le_fils">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj" id="xolnki_29" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -2411,7 +2411,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add redirect support for wikibase pages.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Tour_du_Táchira_2016" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Tour_du_Táchira_2016</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Tour_du_T%C3%A1chira_2016">https://fr.wikipedia.org/wiki/Tour_du_Táchira_2016</a>
       </dd>
     </dl>
     <ul>
@@ -2708,7 +2708,7 @@
         <span style='font-variant:small-caps'>Example</span>: Erreur de script: @C:/xowa/bin/any/xowa/xtns/Scribunto/engines/Luaj/MWServer.lua:59 vm error: java.lang.ClassCastException: [Lgplx.Keyval; cannot be cast to java.lang.String.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Acte_de_Médiation" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Acte_de_Médiation</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Acte_de_M%C3%A9diation">https://fr.wikipedia.org/wiki/Acte_de_Médiation</a>
       </dd>
     </dl>
     <ul>
@@ -2872,7 +2872,7 @@
         Example: ==a&lt;br/&gt;b==.
       </dd>
       <dd>
-        Links: <a href="https://fr.wikipedia.org/wiki/Thermokarst" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Thermokarst</a> <a href="https://fr.wikipedia.org/wiki/Conseil_régional_du_Nord-Pas-de-Calais" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Conseil_régional_du_Nord-Pas-de-Calais</a> <a href="https://fr.wikipedia.org/wiki/Tour_de_ski_2007-2008" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Tour_de_ski_2007-2008</a>
+        Links: <a href="/site/fr.wikipedia.org/wiki/Thermokarst">https://fr.wikipedia.org/wiki/Thermokarst</a> <a href="/site/fr.wikipedia.org/wiki/Conseil_r%C3%A9gional_du_Nord-Pas-de-Calais">https://fr.wikipedia.org/wiki/Conseil_régional_du_Nord-Pas-de-Calais</a> <a href="/site/fr.wikipedia.org/wiki/Tour_de_ski_2007-2008">https://fr.wikipedia.org/wiki/Tour_de_ski_2007-2008</a>
       </dd>
     </dl>
     <ul>
@@ -2888,7 +2888,7 @@
         Example: ==a== ==a==.
       </dd>
       <dd>
-        Links: <a href="https://fr.wikipedia.org/wiki/Itanium" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Itanium</a> <a href="https://fr.wikipedia.org/wiki/10000" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/10000</a> <a href="https://fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel</a> <a href="https://fr.wikipedia.org/wiki/Technology_and_Entertainment_Software" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Technology_and_Entertainment_Software</a>
+        Links: <a href="/site/fr.wikipedia.org/wiki/Itanium">https://fr.wikipedia.org/wiki/Itanium</a> <a href="/site/fr.wikipedia.org/wiki/10000">https://fr.wikipedia.org/wiki/10000</a> <a href="/site/fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel">https://fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel</a> <a href="/site/fr.wikipedia.org/wiki/Technology_and_Entertainment_Software">https://fr.wikipedia.org/wiki/Technology_and_Entertainment_Software</a>
       </dd>
     </dl>
     <ul>
@@ -2904,7 +2904,7 @@
         Example: ==a&lt;ref name="b"&gt;c==.
       </dd>
       <dd>
-        Links: <a href="https://fr.wikipedia.org/wiki/Dal" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Dal</a>
+        Links: <a href="/site/fr.wikipedia.org/wiki/Dal">https://fr.wikipedia.org/wiki/Dal</a>
       </dd>
     </dl>
     <ul>
@@ -3188,7 +3188,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Portail:Nord-Am%C3%A9rindiens/Image_s%C3%A9lectionn%C3%A9e">https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée</a>
       </dd>
     </dl>
     <ul>
@@ -3198,7 +3198,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Wikip%C3%A9dia:LiveRC/ToDo">https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo</a>
       </dd>
     </dl>
     <h3>
@@ -4202,7 +4202,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Allow empty string for Raw argument in PAGESFORCATEGORY. Example: 0.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Projet:Venezuela" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Projet:Venezuela</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Projet:Venezuela">https://fr.wikipedia.org/wiki/Projet:Venezuela</a>
       </dd>
     </dl>
     <ul>
