--- a/home/wiki/Change_log/2017.html
+++ b/home/wiki/Change_log/2017.html
@@ -549,7 +549,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Format doubles using sprintf-like behavior.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Hasbro" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Hasbro</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Hasbro">https://fr.wikipedia.org/wiki/Hasbro</a>
       </dd>
     </dl>
     <ul>
@@ -1291,7 +1291,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Use scribunto key name for datatypes.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Louis_Malle" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Louis_Malle</a> <a href="https://fr.wikipedia.org/wiki/Toulon" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Toulon</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Louis_Malle">https://fr.wikipedia.org/wiki/Louis_Malle</a> <a href="/site/fr.wikipedia.org/wiki/Toulon">https://fr.wikipedia.org/wiki/Toulon</a>
       </dd>
     </dl>
     <ul>
