--- a/home/wiki/Change_log/v3.10.4.1.html
+++ b/home/wiki/Change_log/v3.10.4.1.html
@@ -201,7 +201,7 @@
         <span style='font-variant:small-caps'>Example</span>: "File:A.png|a|b" -&gt; "b" x&gt; "a|b".
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Belgique" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Belgique</a> <a href="https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15" rel="nofollow" class="external free">https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Belgique">https://fr.wikipedia.org/wiki/Belgique</a> <a href="https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15" rel="nofollow" class="external free">https://github.com/wikimedia/mediawiki/commit/63aeabeff1e098e872cc46f3698c61457e44ba15</a>
       </dd>
     </dl>
     <ul>
