--- a/home/wiki/Change_log/v3.7.1.1.html
+++ b/home/wiki/Change_log/v3.7.1.1.html
@@ -124,7 +124,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Portail:Nord-Am%C3%A9rindiens/Image_s%C3%A9lectionn%C3%A9e">https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée</a>
       </dd>
     </dl>
     <ul>
@@ -134,7 +134,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Wikip%C3%A9dia:LiveRC/ToDo">https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo</a>
       </dd>
     </dl>
     <h3>
