--- a/home/wiki/Change_log/v3.8.5.1.html
+++ b/home/wiki/Change_log/v3.8.5.1.html
@@ -157,7 +157,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add redirect support for wikibase pages.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Tour_du_Táchira_2016" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Tour_du_Táchira_2016</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Tour_du_T%C3%A1chira_2016">https://fr.wikipedia.org/wiki/Tour_du_Táchira_2016</a>
       </dd>
     </dl>
     <ul>
