--- a/home/wiki/Change_log/v4.5.7.1706.html
+++ b/home/wiki/Change_log/v4.5.7.1706.html
@@ -186,7 +186,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Format doubles using sprintf-like behavior.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Hasbro" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Hasbro</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Hasbro">https://fr.wikipedia.org/wiki/Hasbro</a>
       </dd>
     </dl>
     <ul>
