--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -323,7 +323,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikibooks.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://en.wikibooks.org" rel="nofollow" class="external free">http://en.wikibooks.org</a>
+          <a href="/site/en.wikibooks.org/wiki/">http://en.wikibooks.org</a>
         </td>
         <td>
           English
@@ -375,7 +375,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikiquote.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://en.wikiquote.org" rel="nofollow" class="external free">http://en.wikiquote.org</a>
+          <a href="/site/en.wikiquote.org/wiki/">http://en.wikiquote.org</a>
         </td>
         <td>
           English
@@ -453,7 +453,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('de.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/de.wikipedia.org/wiki/">http://de.wikipedia.org</a>
+          <a href="http://de.wikipedia.org" rel="nofollow" class="external free">http://de.wikipedia.org</a>
         </td>
         <td>
           German
@@ -869,7 +869,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('fr.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://fr.wikipedia.org" rel="nofollow" class="external free">http://fr.wikipedia.org</a>
+          <a href="/site/fr.wikipedia.org/wiki/">http://fr.wikipedia.org</a>
         </td>
         <td>
           French
@@ -19823,7 +19823,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('ur.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/ur.wikipedia.org/wiki/">http://ur.wikipedia.org</a>
+          <a href="http://ur.wikipedia.org" rel="nofollow" class="external free">http://ur.wikipedia.org</a>
         </td>
         <td>
           Urdu
