--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -419,6 +419,41 @@
       </tr>
       <tr>
         <td>
+          fr.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2019-08-04
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           nethackwiki.com
         </td>
         <td class='cell_center'>
@@ -528,7 +563,7 @@
           n
         </td>
         <td class='cell_center'>
-          2019-06-28
+          2019-07-31
         </td>
         <td class='cell_center'>
           2017-03-20
