--- a/home/wiki/Diagnostics/HTML_Tidy.html
+++ b/home/wiki/Diagnostics/HTML_Tidy.html
@@ -42,7 +42,7 @@
       should not be small
     </p>
     <h2>
-      <span class="mw-headline" id="para_inside_span_causes_horizontal_scroll_(http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes">para inside span causes horizontal scroll (<a href="http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes" rel="nofollow" class="external free">http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes</a></span>
+      <span class="mw-headline" id="para_inside_span_causes_horizontal_scroll_(http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes">para inside span causes horizontal scroll (<a href="/site/fr.wikipedia.org/wiki/Franz_Liszt">http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes</a></span>
     </h2>
     <p>
       <code>fails if horizontal scroll bar</code><br>
