--- a/home/wiki/Diagnostics/Scribunto/MessageLibrary.html
+++ b/home/wiki/Diagnostics/Scribunto/MessageLibrary.html
@@ -164,7 +164,13 @@
       </tr>
       <tr>
         <td>
-          <span style='color: green;'>pass</span>
+          <span style='color: red;'>fail:<br>
+          'Sun</span>
+<pre>
+<span style='color: red;'>'<br>
+'Dim.
+ '</span>
+</pre>
         </td>
         <td>
           inLanguage
@@ -173,7 +179,7 @@
           {{#invoke:Diagnostics/MessageLibrary|plain_inLanguage|fr|sun}}
         </td>
         <td>
-          Dim. 
+          Sun 
           <p>
             <br>
           </p>
