--- a/home/wiki/Change_log/v4.4.0.1703.html
+++ b/home/wiki/Change_log/v4.4.0.1703.html
@@ -98,7 +98,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Use scribunto key name for datatypes.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Louis_Malle" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Louis_Malle</a> <a href="https://fr.wikipedia.org/wiki/Toulon" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Toulon</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Louis_Malle">https://fr.wikipedia.org/wiki/Louis_Malle</a> <a href="/site/fr.wikipedia.org/wiki/Toulon">https://fr.wikipedia.org/wiki/Toulon</a>
       </dd>
     </dl>
     <ul>
