--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -128,7 +128,7 @@
     </p>
     <ul>
       <li>
-        HTTP Server: Fix links and images not working for 2019-05 enwiki HTML databases. {detected by anonymous}
+        HTTP Server: Fix links and images not working for 2019-05 enwiki HTML databases. {detected by ctd}
       </li>
     </ul>
     <dl>
