--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -383,7 +383,7 @@ Stores most recently viewed page. Used when visiting &quot;Special:XowaCfg&quot;
     
     <!-- TEXT:val -->
     <div class='xocfg_itm_data'>
-<textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">home/wiki/Main_Page?action=edit</textarea></div>
+<textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">home/wiki/Change_log/v4.6.3.1908?action=edit</textarea></div>
     
     <!-- HIDDEN:key,ctx -->
     <input type='hidden' id='xowa.app.startup.tabs.previous_list__key_box' value='xowa.app.startup.tabs.previous_list'></input>
